[package]
name = "nntp-rs"
version = "0.1.0-beta.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4" }
thiserror = { version = "2.0" }
deadpool = { version = "0.12", default-features = false, features = [
    "managed",
    "rt_tokio_1",
] }
tokio-rustls = { version = "0.26" }
webpki-roots = { version = "1.0.3" }
tracing = { version = "0.1" }
tokio = { version = "1", features = ["io-util", "net"] }
human-repr = { version = "1.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
